--- a/NewsApp/NewsApp/NewsApp/ReusableViews/ArticleItem.xaml
+++ b/NewsApp/NewsApp/NewsApp/ReusableViews/ArticleItem.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="NewsApp.ReusableControls.ArticleItem">
+             x:Class="NewsApp.ReusableViews.ArticleItem">
   <ContentView.Content>
       <StackLayout>
           <Label Text="Article Item!" />
