--- a/NewsApp/NewsApp/NewsApp/ReusableViews/ArticleItem.xaml
+++ b/NewsApp/NewsApp/NewsApp/ReusableViews/ArticleItem.xaml
@@ -18,19 +18,6 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label Text="{Binding Title}"
-               Padding="10,0"
-               Grid.Row="1"
-               Grid.Column="1"
-               FontSize="Medium"
-               FontAttributes="Bold" />
-
-        <Label Text="{Binding PublishedAt, StringFormat='{0:MMMM d, yyyy}'}"
-               Padding="10"
-               Grid.Column="1"
-               Grid.Row="2"
-               FontSize="Small" />
-
         <Frame Grid.Row="1"
                Grid.RowSpan="2"
                CornerRadius="15"
@@ -42,9 +29,23 @@
                    VerticalOptions="Center" />
         </Frame>
 
+        <Label Text="{Binding Title}"
+               Padding="10,0"
+               Grid.Row="1"
+               Grid.Column="1"
+               Grid.ColumnSpan="2"
+               FontSize="Small"
+               FontAttributes="Bold" />
+
+        <Label Text="{Binding PublishedAt, StringFormat='{0:MMMM d, yyyy}'}"
+               Padding="10,0"
+               Grid.Column="1"
+               Grid.Row="2"
+               FontSize="10" />
+
         <BoxView BackgroundColor="LightGray"
                  Grid.Row="4"
-                 Grid.Column="2" />
+                 Grid.ColumnSpan="3" />
 
     </Grid>
 </ContentView>
